--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<header>
     <div class="menu-container">
         <div class="header-menu">
             <div class="link-one">link-one</div>
@@ -27,6 +28,39 @@
                 </div>
         </div>
     </div>
-    
+</header>
+
+<main>
+    <div class="photo-grid-container">
+        <div class="hero-two"><h2>This website is awesome</h2></div>
+        <div class="photo-grid-item">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="photo-grid-item">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="photo-grid-item">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="photo-grid-item">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+
+    </div>
+</main>
+<div class="quote-container">
+    <em>This is an inspiring quote, or a testimonial from a customer.
+        Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it
+        looks nice.</em>
+    <p>- Thor, God of Thunder</p>
+</div>
+<div class="calltoaction-container">
+    <strong>Call to action! Its time!</strong>
+    <a>Sign up for our product by clicking this button right over there</a>
+    <button class="button-two">Sign up</button>
+</div>
+<div class="footer-container">
+    Copyright &copy; The Odin Project 2021
+</div>
 </body>
 </html>
