fix in html structure and create header section

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
 <header>
     <div class="menu-container">
+        <p id="logo">Header Logo</p>
         <div class="header-menu">
-            <div class="link-one">link-one</div>
-            <div class="link-two">link link-two</div>
-            <div class="link-three">link-three</div>
+            <div class="link-one">header link one</div>
+            <div class="link-two">header link two</div>
+            <div class="link-three">header link three</div>
         </div>
     </div>
     <div class="header-container">
