header-hero section layout

--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
     </div>
     <div class="header-container">
         <div class="header">
-            <div class="hero"><h1>This website is awesome</h1></div>
-            <div class="secondary"><p>This website has some subtext that goes here under the main title. It's a smaller
-                font and the
-                color is lower contrast.</p></div>
-                <button class="button-one">Sign up</button>
+            <div class="hero">
+                <h1>This website is awesome</h1>
+                <p class="secondary">This website has some subtext that goes here under the main title. It's a smaller
+                    font and the
+                    color is lower contrast.</p>
+                    <button class="button-one">Sign up</button>
+            </div>
+            
                 <div class="hero-image">
                     <p>this placeholder for an image</p>
                 </div>
@@ -33,7 +36,7 @@
 
 <main>
     <div class="photo-grid-container">
-        <div class="hero-two"><h2>This website is awesome</h2></div>
+        <div class="hero-two"><h2>Some random information</h2></div>
         <div class="photo-grid-item">
             <p>this is some subtext under an illustration or image</p>
         </div>
