--- a/index.html
+++ b/index.html
@@ -35,19 +35,23 @@
 </header>
 
 <main>
+    <div class="hero-two"><h2>Some random information</h2></div>
     <div class="photo-grid-container">
-        <div class="hero-two"><h2>Some random information</h2></div>
         <div class="photo-grid-item">
-            <p>this is some subtext under an illustration or image</p>
+            <div class="box"></div>
+            <p class="subtext">this is some subtext under an illustration or image</p>
         </div>
         <div class="photo-grid-item">
-            <p>this is some subtext under an illustration or image</p>
+            <div class="box"></div>
+            <p class="subtext">this is some subtext under an illustration or image</p>
         </div>
         <div class="photo-grid-item">
-            <p>this is some subtext under an illustration or image</p>
+            <div class="box"></div>
+            <p class="subtext">this is some subtext under an illustration or image</p>
         </div>
         <div class="photo-grid-item">
-            <p>this is some subtext under an illustration or image</p>
+            <div class="box"></div>
+            <p class="subtext">this is some subtext under an illustration or image</p>
         </div>
 
     </div>
