create call to action section

--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@
     <p>- Thor, God of Thunder</p>
 </div>
 <div class="calltoaction-container">
-    <strong>Call to action! Its time!</strong>
-    <a>Sign up for our product by clicking this button right over there</a>
+    <div class="container">
+        <div class="left"> 
+    <strong class="str">Call to action! Its time!</strong>
+    <p class="signtext">Sign up for our product by clicking this button right over there</p>
+</div>
     <button class="button-two">Sign up</button>
+</div>
 </div>
 <div class="footer-container">
     Copyright &copy; The Odin Project 2021
