add link return to logo

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <strong class="str">Call to action! Its time!</strong>
     <p class="signtext">Sign up for our product by clicking this button right over there</p>
 </div>
-    <button class="button-two">Sign up</button>
+    <a href="#logo"><button class="button-two">Sign up</button></a>
 </div>
 </div>
 <div class="footer-container">
